# CerebreX

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  SECURITY.md  package.json  publish-packages.mjs  tsconfig.json  turbo.json
.claude/: settings.json
.github/workflows/: build-binaries.yml  ci.yml  deploy-kairos.yml  deploy-memex.yml  deploy.yml  docker.yml  publish.yml
apps/cli/: package.json
apps/cli/src/: index.ts
apps/cli/src/__tests__/: forge-parser.test.ts  jwt.test.ts  memex.test.ts  secrets.test.ts
apps/cli/src/commands/: auth.ts  bench.ts  build.ts  hive.ts  memex.ts  other-commands.ts  test.ts  trace.ts
apps/cli/src/core/auth/: risk-gate.ts
apps/cli/src/core/forge/: generator.ts  parser.ts  validator.ts
apps/cli/src/core/memex/: engine.ts
apps/cli/src/core/test/: assertions.ts  engine.ts  reporter.ts  types.ts
apps/cli/src/core/trace/: dashboard.ts  recorder.ts  server.ts  viewer.ts
apps/dashboard/src/: index.html
benchmarks/results/: v0.9.2.json
sdks/python/: pyproject.toml
sdks/python/examples/: crewai_integration.py  langchain_integration.py
sdks/python/src/cerebrex/: _http.py  client.py
sdks/python/tests/: conftest.py  test_auth.py  test_kairos.py  test_memex.py  test_registry.py  test_trace.py
workers/kairos/: wrangler.toml
workers/kairos/migrations/: 0001_kairos_schema.sql
workers/kairos/src/: index.ts
workers/memex/: wrangler.toml
workers/memex/migrations/: 0001_memex_schema.sql
workers/memex/src/: index.ts
workers/registry/: package.json  schema-v2.sql  schema-v3.sql  schema-v4.sql  schema-v5.sql  schema.sql  wrangler.toml
workers/registry/src/: index.ts
workers/site/src/: index.ts
