[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerebrex"
version = "0.9.2"
description = "CerebreX Python SDK — async client for the CerebreX Agent Infrastructure OS"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "A Real Cool Co.", email = "arealcoolcompany@gmail.com" }]
keywords = ["cerebrex", "agents", "mcp", "ai", "llm", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
crewai    = ["crewai>=0.1.0"]
dev       = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage   = "https://therealcool.site"
Repository = "https://github.com/arealcoolco/CerebreX"
Issues     = "https://github.com/arealcoolco/CerebreX/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cerebrex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
target-version = "py310"
line-length    = 100
src            = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cerebrex"]

[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true
